2012-04-01  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Support installation of releases other than latest available.

	* src/pkgbase.h (pkgActionItem::ApplyBounds): New method; declare it.

	* src/pkgdeps.cpp (pkgActionItem::ApplyBounds): Implement it.
	(pkgXmlDocument::Schedule): Use it to interpret user specified version
	bounds, and apply them to scheduled action items.  Having used...
	(get_version_bounds): ...this new static inline function...
	...to acquire any user specified version bounds, check that they can
	be honoured, before scheduling any action; delegate diagnostics to...
	(dmh_notify_no_match): ...this new local helper function, to report
	when they can't, and to indicate viable alternatives.

2012-03-26  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Rework previously inadequate solution for MinGW-Bug #3424406

	* src/pkgtask.h: Update copyright notice for current year.
	(ACTION_MAY_SELECT): New manifest constant for use as flag; define it.
	* src/pkgexec.cpp (pkgActionItem::SelectIfMostRecentFit): Assign it.

	* src/pkgdeps.cpp (STATIC_INLINE): New macro; define it.
	(ACTION_RECURSIVE_REINSTALL, ACTION_RECURSIVE_UPGRADE):
	(ACTION_RECURSIVE_REPLACE): New action code constants; define them.
	(with_flags): Original macro deleted; replace it with...
	(with_request_flags): ...this new static inline function.
	(if_noref, if_match, if_alias, with_download, promote): New static
	inline functions; they replace original macros of the same names.
	(is_recursive_action): Function no longer used; delete it.
	(action_class): New static inline function; implement and use it...
	(pkgXmlDocument::ResolveDependencies): ...here, to identify scheduling
	requirements for packages which are already installed; depends on...
	(request_mode): ...this new automatic variable; it augments and...
	(recursive_mode): ...replaces this one; rename it accordingly.
	(viable): Automatic variable no longer used; delete it.